--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ label {
 }
 
 input {
-  @apply appearance-none block w-full bg-gray-200 text-gray-600 text-xl border-2 border-gray-200 rounded py-3 px-2 mb-3 focus:outline-none focus:bg-white;
+  @apply appearance-none block w-full bg-gray-200 text-gray-600 border-2 border-gray-200 rounded py-3 px-2 mb-3 focus:outline-none focus:bg-white;
 }
 
 textarea {
